moved more of surrounding tags to page layout for blogs

--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -1,23 +1,15 @@
 ---
 layout: page
 comments: true
+title: "Javascript"
 ---
-  <h1>Javascript</h1>
-  <h5>Posted by Osman,
-    <span id="spanDate">23rd Aug 2014</span>
-  </h5>
-  <img class="blog_img" src="../imgs/js.jpeg" alt="Add a blog image here">
-  <div class="blog_post">
-    <h4>
-      <p>Just why is JavaScript so popular in web development?</h4>
-    Javascript began as a client side language. Users could use scripts to interact with users control the browser and alter the document content. As its evolved the things you can do with Javascript has increased. There are numerous Javascript libraries such as Jquery which provide extra functionality to websites - <a href="http://kenwheeler.github.io/slick/">a sliding carousel</a> for example, or a way to respond to a user click by triggering an animation.</p>
-    <p>Beyond this Javascript is now also used as a server side language in Node.js and a lot of exciting stuff is happening in this space - <a href="http://onepagelove.com/new-jumo-concept">single page websites for example</a>
-    </p>
-    <h4>The good the bad and the ugly</h4>
-    <p>There's a lot of good when it comes to Javascript including the functionality mentioned. Javascript as a language also supports multiple programming paradigms OOP, imperative, functional etc meaning that it can be suited to all types of inclinations and makes available a greater range of choices when considering implementation.</p>
+<p>Just why is JavaScript so popular in web development?</h4>
+  Javascript began as a client side language. Users could use scripts to interact with users control the browser and alter the document content. As its evolved the things you can do with Javascript has increased. There are numerous Javascript libraries such as Jquery which provide extra functionality to websites - <a href="http://kenwheeler.github.io/slick/">a sliding carousel</a> for example, or a way to respond to a user click by triggering an animation.</p>
+<p>Beyond this Javascript is now also used as a server side language in Node.js and a lot of exciting stuff is happening in this space - <a href="http://onepagelove.com/new-jumo-concept">single page websites for example</a>
+</p>
+<h4>The good the bad and the ugly</h4>
+<p>There's a lot of good when it comes to Javascript including the functionality mentioned. Javascript as a language also supports multiple programming paradigms OOP, imperative, functional etc meaning that it can be suited to all types of inclinations and makes available a greater range of choices when considering implementation.</p>
 
-    <p>And so now the bad - Javascript has little type safety and code can easily have latent type errors which are not discovered until a site has been in production for several weeks. Security is also a huge concern with things like cross site scripting and forgery a constant concern that has to be kept in mind with coding.</p>
+<p>And so now the bad - Javascript has little type safety and code can easily have latent type errors which are not discovered until a site has been in production for several weeks. Security is also a huge concern with things like cross site scripting and forgery a constant concern that has to be kept in mind with coding.</p>
 
-    <p>Overall Javascript is ubiquitous and the web simply would not function nearly as well as it does without it (don't believe me - try disabling Javascript in your browser and see how you get by for the next week). Javascript is here to stay.</p>
-  </div>
-  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
+<p>Overall Javascript is ubiquitous and the web simply would not function nearly as well as it does without it (don't believe me - try disabling Javascript in your browser and see how you get by for the next week). Javascript is here to stay.</p>
