--- a/blog-posts/week5_cultural.html
+++ b/blog-posts/week5_cultural.html
@@ -1,20 +1,12 @@
 ---
 layout: page
 comments: true
+title: "Pair programming"
 ---
-  <h1>Pair programming</h1>
-  <h5>Posted by Osman,
-    <span id="spanDate">7th Sept 2014</span>
-  </h5>
-  <!-- <img class="blog_img" src="../imgs/image002.jpg" alt="Add a blog image here"> -->
-  <div class="blog_post">
-    <p>So I've been spending a lot of time pair programming over the past couple of weeks. Pair programming for the uninitiated is where two developers share the same machine and work together to solve a problem. Typically they adopt special role where one will navigate and instruct the other - the driver.</p>
+<p>So I've been spending a lot of time pair programming over the past couple of weeks. Pair programming for the uninitiated is where two developers share the same machine and work together to solve a problem. Typically they adopt special role where one will navigate and instruct the other - the driver.</p>
 
-    <p>My experience of pair programming is that it can be incredibly helpful to have two pairs of eyes on the same problem. As well as catching syntax errors your partner can catch errors in logic or suggest a better way to implement a solution. One thing I have noticed though is that I tend to become a little more apprehensive when trying to solve a problem during pairing sessions. I tend to allow my partner to make mistakes even though I know they are wrong because I don't want to dominate our session.</p>
+<p>My experience of pair programming is that it can be incredibly helpful to have two pairs of eyes on the same problem. As well as catching syntax errors your partner can catch errors in logic or suggest a better way to implement a solution. One thing I have noticed though is that I tend to become a little more apprehensive when trying to solve a problem during pairing sessions. I tend to allow my partner to make mistakes even though I know they are wrong because I don't want to dominate our session.</p>
 
-    <p>One of the things I find really beneficial is getting feedback from my pairing partners. I tend to think I have good self awareness but when reviewing my feedback I've become aware of things I didn't even consider. The feedback was very constructive and helped make me better at coding - one of the things I tend to do is test code constantly but I wouldn't tell my pair what I was doing so they weren't aware of how I came up with the solution eventually. It helped to hear that feedback and raised my awareness of my partner and that I can do better to communicate.</p>
+<p>One of the things I find really beneficial is getting feedback from my pairing partners. I tend to think I have good self awareness but when reviewing my feedback I've become aware of things I didn't even consider. The feedback was very constructive and helped make me better at coding - one of the things I tend to do is test code constantly but I wouldn't tell my pair what I was doing so they weren't aware of how I came up with the solution eventually. It helped to hear that feedback and raised my awareness of my partner and that I can do better to communicate.</p>
 
-    <p>Giving feedback can be tricky because you want to be honest but also constructive and you don't want to insult or be hurtful. However reflecting on the feedback I've received the most helpful comments have been the critical ones. They stimulate reflection and an internal discussion that ultimately betters me and gives me suggestions for how to improve not just my coding but working with other people.</p>
-
-  </div>
-  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
+<p>Giving feedback can be tricky because you want to be honest but also constructive and you don't want to insult or be hurtful. However reflecting on the feedback I've received the most helpful comments have been the critical ones. They stimulate reflection and an internal discussion that ultimately betters me and gives me suggestions for how to improve not just my coding but working with other people.</p>
