--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -1,16 +1,11 @@
 ---
 layout: page
 comments: true
+title: "Stereotype threat"
 ---
-  <h1>Stereotype threat</h1>
-  <h5>Posted by Osman, 2014-09-13</h5>
-  <!-- <img class="blog_img" src="../imgs/" alt="Add a blog image here"> -->
-  <div class="blog_post">
-    <p>Recently I came across an article about a phenomenon known as Stereotype threat... Taken directly from <a href="http://edglossary.org/stereotype-threat/">Edglossary: </a></p>
+<p>Recently I came across an article about a phenomenon known as Stereotype threat... Taken directly from <a href="http://edglossary.org/stereotype-threat/">Edglossary: </a>
+</p>
 
-    <p>"Stereotype threat refers to the risk of confirming negative stereotypes about an individual’s racial, ethnic, gender, or cultural group. The term was coined by the researchers Claude Steele and Joshua Aronson, who performed experiments that showed that black college students performed worse on standardized tests than their white peers when they were reminded, before taking the tests, that their racial group tends to do poorly on such exams. When their race was not emphasized, however, black students performed similarly to their white peers."</p>
+<p>"Stereotype threat refers to the risk of confirming negative stereotypes about an individual’s racial, ethnic, gender, or cultural group. The term was coined by the researchers Claude Steele and Joshua Aronson, who performed experiments that showed that black college students performed worse on standardized tests than their white peers when they were reminded, before taking the tests, that their racial group tends to do poorly on such exams. When their race was not emphasized, however, black students performed similarly to their white peers."</p>
 
-    <p>This prompted me to reflect and think of times when I felt it and how it may have affected my achievement. </p>
-    
-  </div>
-  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
+<p>This prompted me to reflect and think of times when I felt it and how it may have affected my achievement.</p>
