--- a/blog-posts/week7_cultural.html
+++ b/blog-posts/week7_cultural.html
@@ -1,19 +1,15 @@
 ---
 layout: page
 comments: true
+title: "Values"
 ---
-  <h1>Values</h1>
-  <h5>{{ site.time | date: '%B %d, %Y' }} by Osman Afridi</h5>
-  <div class="blog_post">
-    <p>Values are complex and fascinating. Reflecting on times in my life where I've been the happiest, the proudest, or the most satisfied, the following values have been closely associated to those feelings - accomplishment, challenge, growth, effectiveness, excellence and knowledge.
+<p>Values are complex and fascinating. Reflecting on times in my life where I've been the happiest, the proudest, or the most satisfied, the following values have been closely associated to those feelings - accomplishment, challenge, growth, effectiveness, excellence and knowledge.
 
-    </p>
-    <p>Growth is something I think about a lot and something that drives me. Simply put I like to keep things moving and growing and progressing. This is in relation to many things - whether it's learning new sills, languages etc or improving the quality of living or finding new ways to improve how we do things. Growth is a constant driver for me.</p>
+</p>
+<p>Growth is something I think about a lot and something that drives me. Simply put I like to keep things moving and growing and progressing. This is in relation to many things - whether it's learning new sills, languages etc or improving the quality of living or finding new ways to improve how we do things. Growth is a constant driver for me.</p>
 
-    <p>I try to constantly live up to my values. </p>
+<p>I try to constantly live up to my values.</p>
 
-    <p>The last topic somebody asked me for advice on was to do with a personal relationship.</p>
+<p>The last topic somebody asked me for advice on was to do with a personal relationship.</p>
 
-    <p>Often in times where my confidence is shaky or I feel a little unnerved I find reflecting on my values helps anchor me and reminds me of my achievements.</p>
-  </div>
-  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
+<p>Often in times where my confidence is shaky or I feel a little unnerved I find reflecting on my values helps anchor me and reminds me of my achievements.</p>
