--- a/blog-posts/week7_technical.html
+++ b/blog-posts/week7_technical.html
@@ -1,14 +1,5 @@
 ---
 layout: page
 comments: true
+title: 
 ---
-<section class="about">
-  <h1>Blog</h1>
-  <h5>{{ site.time | date: '%B %d, %Y' }} by Osman Afridi</h5>
-  </h5>
-  <img class="blog_img" src="../imgs/" alt="Add a blog image here">
-  <div class="blog_post">
-    <<!-->Insert blog post here</!-->
-  </div>
-  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
