--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -1,19 +1,13 @@
 ---
 layout: page
 comments: true
+title: "Well designed sites"
 ---
-  <h1>Design - three sites that do it well</h1>
-  <h5>Posted by Osman,
-    <span id="spanDate">7th Sept 2014</span>
-  </h5>
-  <div class="blog_post">
-  <ul>
-    <li><a href="http://www.bbc.com/news/">BBC News</a>
-      A decent site to get the latest news. As well as being a consistent source of reliable news it has well thought out presentation and simple design. It's very easy to skim for news items of interest and find the most popular news items simply and easily.</li>
-    <li><a href="http://www.amazon.com/">Amazon</a>
-      I visit this site frequently to buy almost everything from usb cables to Heinz baked beans. The layout can be a little overwhelming as there is so much presented but the search bar and grid-like presentation make it easy to find what I'm looking for. Minor quirks that I find irritating - the price per ounce of food items doesn't display consistently!</li>
-    <li><a href="https://news.ycombinator.com/">Hacker News</a>
-      I like this site a lot as its an excellent source of news involving technology and the tech industry. The comments section also has some very interesting opinions. The website is simple - a numbered list of popular posts with a link to comments. Its minimalist design is a credit to it and makes navigating the site easy. One annoying thing I find is that I have to click through the link and then close the new window and then click on the comments to see them. It would be nice if it presented the article in a side bar with the comments just below for example.</li>
-    </ul>
-  </div>
-  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
+<ul>
+  <li><a href="http://www.bbc.com/news/">BBC News</a>
+    A decent site to get the latest news. As well as being a consistent source of reliable news it has well thought out presentation and simple design. It's very easy to skim for news items of interest and find the most popular news items simply and easily.</li>
+  <li><a href="http://www.amazon.com/">Amazon</a>
+    I visit this site frequently to buy almost everything from usb cables to Heinz baked beans. The layout can be a little overwhelming as there is so much presented but the search bar and grid-like presentation make it easy to find what I'm looking for. Minor quirks that I find irritating - the price per ounce of food items doesn't display consistently!</li>
+  <li><a href="https://news.ycombinator.com/">Hacker News</a>
+    I like this site a lot as its an excellent source of news involving technology and the tech industry. The comments section also has some very interesting opinions. The website is simple - a numbered list of popular posts with a link to comments. Its minimalist design is a credit to it and makes navigating the site easy. One annoying thing I find is that I have to click through the link and then close the new window and then click on the comments to see them. It would be nice if it presented the article in a side bar with the comments just below for example.</li>
+</ul>
