finished week7 tech blog

--- a/blog-posts/week7_technical.html
+++ b/blog-posts/week7_technical.html
@@ -1,5 +1,29 @@
 ---
 layout: page
-comments: true
+<!-- comments: true -->
 title: "To SQL or not to SQL"
 ---
+
+<h3>Overview</h3>
+<p>Most people are familiar with SQL and have a basic understanding of the various RDBMS out there - Postgres, MySQL, Oracle etc. However recently a newer type of database is becoming popular - NoSQL such as MongoDB, Redis, CoudchDb etc. Taken from Wikipedia NoSQL is defined as: </p>
+
+<p>"A NoSQL (often interpreted as Not Only SQL) database provides a mechanism for storage and retrieval of data that is modeled in means other than the tabular relations used in relational databases."</p>
+
+<h3>SQL vs NoSQL</h3>
+<p>A brief comparison of the two types:</p>
+
+<p>
+  <ul>
+    <li>SQL databases are table based, NoSQL databases are document based</li>
+    <li>To query and interact with a SQL db we use SQL (structured query language), to interact with NoSQL we use database-specific syntax.</li>
+    <li>SQL dbs have predefined schemas NoSQL dbs do not require them.</li>
+    <li>NoSQL can provide benefits over SQL when used for big data in terms of speed and performance</li>
+    <li></li>
+  
+  </ul>
+</p>
+
+
+<h3>Conclusion</h3>
+
+<p>Any topic concerning technology A vs technology B will always inspire heated debate about which is better. As with most technologies the choice of which type to use is dependent on needs and situation. The options given here offer different advantages and developers should think carefully about which choice is best for their needs.</p>
