--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 layout: default
 ---
   <h2>Welcome</h2>
-  <p>This is the homepage of Osman Afridi. I am a software developer focusing primarily on Ruby on Rails.</p>
+  <p>I am Osman Afridi. I am a software developer focusing primarily on Ruby on Rails. Welcome.</p>
 
   <h4>A cursory intro...</h4>
   <p>
-    I graduated in 2007 with a degree in computer science. Since then I've worked for the 68,000 person IT consultancy <a href="http://www.cgi.com/en" target="blank">CGI</a>, co-founded a 3 person startup <a href="http://www.matchnurse.com" target="blank">Matchnurse</a> and currently work for the 300+ person rapidly growing startup-come-huge-success-story <a href="http://www.atlassian.com" target="blank">Atlassian.</a>
+    I graduated in 2007 with a degree in computer science. Since then I've worked for the 68,000 person IT consultancy <a href="http://www.cgi.com/en" target="blank">CGI</a>, co-founded a 3 person startup <a href="http://www.matchnurse.com" target="blank">Matchnurse</a> and worked for the huge startup success <a href="http://www.atlassian.com" target="blank">Atlassian.</a>
   </p>
 
-  <p>I wear a lot of hats and work across different tech stacks. Lately I've been interested in Ruby on rails and the Javascript space with a particular interest in backbone and node.js. Prior to that I worked with Java which was less than thrilling.</p>
-  <p>Outside of tech I enjoy traveling and hope to get to explore each and every country in the world before time runs out - I've managed to travel to most continents excluding Africa and Antarctica which are next on the list. I'm also a huge bookworm but have a nasty obsessive compulsive habit of committing to books long after I lose interest. Other things I enjoy in no particular order - the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz - I can't stress this enough) on toast.</p>
+  <p>I wear a lot of hats and work across different tech stacks. Lately I've been interested in Ruby on rails and the Javascript space with a particular interest in node.js.</p>
+  <p>Outside of coding I enjoy traveling and hope to get to explore each and every country in the world before time runs out - I've managed to travel to most continents excluding Africa and Antarctica which are next on the list. I'm also a huge bookworm but have a nasty obsessive compulsive habit of committing to books long after I lose interest. Other things I enjoy in no particular order - arduinos and microcontrolling, the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz) on toast and a lot of other stuff.</p>
   <p>I'm always wanting to work on cool projects and love collaborating so get in touch via the usual channels...</p>
 
-<!--   <div class="profile">
+ <!--  <div class="profile">
     <img src="../imgs/profile.png" alt="profile_image">
     <p>Osman Afridi</p>
   </div> -->
