modified homepage text slightly

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 layout: default
 ---
   <h2>Welcome</h2>
-  <p>I am Osman Afridi. I am a software developer focusing primarily on Ruby on Rails. Welcome.</p>
+  <p>I am a software developer focusing primarily on Ruby on Rails. Welcome.</p>
 
-  <h4>A cursory intro...</h4>
   <p>
-    I graduated in 2007 with a degree in computer science. Since then I've worked for the 68,000 person IT consultancy <a href="http://www.cgi.com/en" target="blank">CGI</a>, co-founded a 3 person startup <a href="http://www.matchnurse.com" target="blank">Matchnurse</a> and worked for the huge startup success <a href="http://www.atlassian.com" target="blank">Atlassian.</a>
+    I graduated in 2007 with a degree in computer science. Since then I've worked for the 68,000 person IT consultancy <a href="http://www.cgi.com/en" target="blank">CGI</a>, co-founded a 3 person startup <a href="http://www.matchnurse.com" target="blank">Matchnurse</a> and worked for the wildly successful startup <a href="http://www.atlassian.com" target="blank">Atlassian.</a>
   </p>
 
   <p>I wear a lot of hats and work across different tech stacks. Lately I've been interested in Ruby on rails and the Javascript space with a particular interest in node.js.</p>
