--- a/projects/index.html
+++ b/projects/index.html
@@ -2,3 +2,9 @@
 layout: default
 ---
 <h1>Projects</h1>
+
+<ul>
+  <li><a href="https://github.com/oafridi/home_automation">Home Automator</a></li>
+  <li><a href="https://github.com/oafridi/cultivated_commerce">Cultivated Commerce</a></li>
+  <li><a href="https://github.com/oafridi/background_demo">Background jobs</a></li>
+</ul>
