--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: default
   </p>
 
   <p>I wear a lot of hats and work across different tech stacks. Lately I've been interested in Ruby on rails and the Javascript space with a particular interest in node.js.</p>
-  <p>Outside of coding I enjoy traveling and hope to get to explore each and every country in the world before time runs out - I've managed to travel to most continents excluding Africa and Antarctica which are next on the list. I'm also a huge bookworm but have a nasty obsessive compulsive habit of committing to books long after I lose interest. Other things I enjoy in no particular order - arduinos and microcontrolling, the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz) on toast and a lot of other stuff.</p>
+  <p>Outside of coding I enjoy traveling and hope to get to explore each and every country in the world before time runs out - I've managed to travel to most continents excluding Africa and Antarctica which are next on the list. I'm also a huge bookworm with a nasty obsessive compulsive habit of committing to books long after I lose interest. 
+  </p>
+  <p>Other things I enjoy in no particular order - arduinos and microcontrolling, the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz) on toast and a lot of other stuff.</p>
   <p>I'm always wanting to work on cool projects and love collaborating so get in touch via the usual channels...</p>
 
  <!--  <div class="profile">
