amended styling so a sidebar can be added later

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<section class="about" id="content">
   <h2>Welcome</h2>
   <p>I am a software developer focusing primarily on Ruby on Rails. Welcome.</p>
 
@@ -13,8 +14,8 @@ layout: default
   </p>
   <p>Other things I enjoy in no particular order - arduinos and microcontrolling, the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz) on toast and a lot of other stuff.</p>
   <p>I'm always wanting to work on cool projects and love collaborating so get in touch via the usual channels...</p>
+</section>      
 
- <!--  <div class="profile">
-    <img src="../imgs/profile.png" alt="profile_image">
-    <p>Osman Afridi</p>
+  <!-- <div class="profile">
+    <a href="mailto:osmanisalso@gmail.com" id="email">@Email</a>
   </div> -->
