added div to projects and blog to apply styling

--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="about">
   <h1>Blog</h1>
   <ul>
     <li><a href="week3_cultural.html">Thinking and learning styles</a>
@@ -18,3 +19,4 @@ layout: default
     <li><a href="week7_technical.html">To SQL or not to SQL</a>
     </li>
   </ul>
+</div>
