--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="about" id="content">
+<div class="about" id="content">
   <h2>Welcome</h2>
   <p>I am a software developer focusing primarily on Ruby on Rails. Welcome.</p>
 
