--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -3,20 +3,18 @@ layout: default
 ---
 <div class="about">
   <h1>Blog</h1>
+    <ul>
+    </ul>
+  <h3>Arduino </h3>
+  <h3>Technical Musings</h3>
+    <ul>
+        <li><a href="enumerable.html">Enumerable methods</a></li>
+        <li><a href="oop.html">Down with OOP</a></li>
+        <li><a href="nosql.html">To SQL or not to SQL</a></li>
+    </ul>
+  <h3>Cultural musings</h3>
   <ul>
-    <li><a href="week3_cultural.html">Thinking and learning styles</a>
-    </li>
-    <li><a href="week4_technical.html">Enumerable methods</a>
-    </li>
-    <li><a href="week4_cultural.html">What's eating the tech industry</a>
-    </li>
-    <li><a href="week5_technical.html">Down with OOP</a>
-    </li>
-    <li><a href="week5_cultural.html">Pair programming</a>
-    </li>
-    <li><a href="week6_technical.html">OOP vs Funct programming</a>
-    </li>    
-    <li><a href="week7_technical.html">To SQL or not to SQL</a>
-    </li>
+    <li><a href="thinking_styles.html">Thinking and learning styles</a></li>
+    <li><a href="sexism.html">What's eating the tech industry</a></li>
   </ul>
 </div>
