--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 <div class="about">
-  <h1>Blog</h1>
   {% for post in site.posts %}
-  <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://erjjones.github.com{{ post.url }}#disqus_thread"></a></small></p>   
-      <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-       {{ post.excerpt }}
-       Tags: {{ post.tags }}              
+    <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> </small></p>
+    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    {{ post.excerpt }}
+    <p><small>Tags: {{ post.tags }}</small> </p>
   {% endfor %}
-
 </div>
