--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="about">
+<h2>Blog</h2>
   {% for post in site.posts %}
     <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> </small></p>
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
