added descriptions to projects. added lacorneta

--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,15 @@ layout: default
 <div class="about">
   <ul>
     <li><a href="https://github.com/oafridi/home_automation">Home Automator</a></li>
+    <p>A node based application utilizing a microcontroller and RF transmission to schedule controlling wireless sockets</p>
     <li><a href="https://github.com/oafridi/cultivated_commerce">Cultivated Commerce</a></li>
+    <p>An online platform to allow homegrowers to interact and exchange produce. Built with Ruby on Rails and javascript</p>
     <li><a href="https://github.com/oafridi/background_demo">Background jobs</a></li>
+    <p>An application to demonstrate using redis and sidekiq for background jobs as part of a talk I gave to students at a developer bootcamp</p>
+    <li><a href="https://lacorneta.herokuapp.com">La corneta Taquiera</a></li>
+    <p>
+      One of my very first rails apps built for my local taqueria. Click here to see the 
+    <a href="https://bitbucket.org/sircommitsalot/lacorneta">La corneta repo</a>
+    </p>
   </ul>
 </div>
